k8s/istio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
  annotations:
    mesh.cloud.google.com/proxy: '{"managed": true}'
  labels:
    name: istio-system
    istio.io/rev: asm-managed
spec: {}
status: {}
